# capability-transformer

./: .gitignore  README.md  implementation.md  pyproject.toml
benchmarks/: RESULTS.md  agentdojo_eval.py
blog/: guarded-qwen-fusing-the-capability-machine.md  introducing-capability-transformer.md
capability_transformer/: __init__.py  api.py  attenuation.py  audit.py  compiled_core.py  compiled_weights.py  compiler.py  core.py  crypto.py  delegated_capability.py  equivalence.py  guarded_qwen.py  hard_attention.py  infoflow.py  inspection.py  ir.py  runtime.py  schema.py  tokenizer.py  torch_head.py  trace.py  trace_recorder.py  transformer_model.py  util.py
examples/: allow_confirmed_gmail_send.json  allow_delegation.json  allow_gmail_draft.json  audit_log_demo.py  compiled_transformer_demo.py  deny_delegation_escalation.json  deny_doc_email_send.json  deny_expired.json  deny_revoked.json  deny_wrong_object.json  escalate_gmail_send.json  gated_runtime_demo.py  guarded_qwen_demo.py  infoflow_demo.py  langchain_rag_demo.py  real_doc_injection_demo.py  sample_malicious_doc.txt  signed_capability_demo.py
tests/: conftest.py  test_agentdojo_benchmark.py  test_api.py  test_attention_heads.py  test_audit_log.py  test_basic_access.py  test_bound_confirmations.py  test_compiled_equivalence.py  test_crypto_signatures.py  test_delegated_capability.py  test_delegation.py  test_exhaustive_bounded.py  test_expiry_revocation.py  test_ffn_decision_logic.py  test_gated_runtime.py  test_guarded_qwen.py  test_high_risk_escalation.py  test_infoflow.py  test_issuer_trust.py  (+9 more)
(+5 files in other folders)
