[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capability-transformer"
version = "0.1.0"
description = "Attention as Capability Machine — a deterministic, transformer-native capability enforcement gateway."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "capability-transformer" }]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
langchain = [
    "langchain-core>=0.3",
]
agentdojo = [
    "agentdojo>=0.1.30",
]

[tool.setuptools.packages.find]
include = ["capability_transformer*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
